# cds-mapproj-rust

./: Cargo.toml
src/: img2celestial.rs  img2proj.rs  lib.rs  math.rs  sip.rs
src/conic/: cod.rs  coe.rs  coo.rs  cop.rs  mod.rs
src/cylindrical/: car.rs  cea.rs  cyp.rs  mer.rs  mod.rs
src/hybrid/: hpx.rs  mod.rs
src/pseudocyl/: ait.rs  mol.rs  par.rs  sfl.rs
src/zenithal/: air.rs  arc.rs  azp.rs  feye.rs  ncp.rs  sin.rs  stg.rs  szp.rs  tan.rs  zea.rs  zpn.rs
tests/: proj.rs  sin.rs
